--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,9 @@ section {
 
 #home {
     background: #000000;
+    background-image: url('images/background.jpg');
+    background-size: cover; /* Agar gambar memenuhi seluruh area */
+    background-position: center; 
     height: 100vh;
     color: white;
     display: flex;
@@ -109,32 +112,6 @@ section {
     text-align: left;
 }
 
-#projects {
-    background-color: #f9f9f9;
-}
-
-.projects-img {
-    width: 100px;
-    border-radius: 50%;
-    margin-right: 30px;
-}
-
-.project-list {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.project-item {
-    width: 30%;
-    margin: 20px 0;
-    text-align: center;
-}
-
-.project-item img {
-    width: 100%;
-    border-radius: 10px;
-}
 
 .skills-list {
     display: inline-block;
@@ -299,4 +276,110 @@ html {
 .hide-navbar {
     transform: translateY(-100%);
     transition: transform 0.3s ease;
+}
+
+
+/* Contact Information Section */
+#contact-info {
+    background-color: #f9f9f9;
+    padding: 40px 20px;
+    text-align: center;
+}
+
+#contact-info h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+#contact-info p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.social-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.social-list li {
+    display: inline-block;
+}
+
+.social-list li a {
+    color: #333;
+    font-size: 20px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: color 0.3s ease;
+}
+
+.social-list li a i {
+    font-size: 24px;
+    transition: transform 0.3s ease;
+}
+
+.social-list li a:hover {
+    color: #f39c12;
+}
+
+.social-list li a:hover i {
+    transform: scale(1.2);
+}
+
+
+/* Achievement Section */
+#achievements {
+    background-color: #f2f2f2;
+    padding: 50px 20px;
+    text-align: center;
+}
+
+#achievements h2 {
+    font-size: 28px;
+    margin-bottom: 40px;
+    color: #333;
+}
+
+.achievement-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    justify-items: center;
+}
+
+.achievement-item {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    max-width: 300px;
+    text-align: left;
+}
+
+.achievement-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.achievement-item i {
+    font-size: 40px;
+    color: #f39c12;
+    margin-bottom: 15px;
+}
+
+.achievement-item h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.achievement-item p {
+    font-size: 16px;
+    color: #666;
 }
